--- a/packages/api-form-builder/tsconfig.build.json
+++ b/packages/api-form-builder/tsconfig.build.json
@@ -10,7 +10,13 @@
     "../commodo",
     "../commodo-graphql",
     "../handler-ssr",
-    "../validation"
+    "../validation",
+    "../handler-db",
+    "../handler",
+    "../db-dynamodb",
+    "../api-i18n-content",
+    "../handler-apollo-server",
+    "../handler-aws"
   ],
   "compilerOptions": {
     "rootDir": "./src",
@@ -18,13 +24,47 @@
     "declarationDir": "./dist"
   },
   "references": [
-    { "path": "../graphql/tsconfig.build.json" },
-    { "path": "../api-i18n/tsconfig.build.json" },
-    { "path": "../api-security/tsconfig.build.json" },
-    { "path": "../api-settings-manager/tsconfig.build.json" },
-    { "path": "../commodo/tsconfig.build.json" },
-    { "path": "../commodo-graphql/tsconfig.build.json" },
-    { "path": "../handler-ssr/tsconfig.build.json" },
-    { "path": "../validation/tsconfig.build.json" }
+    {
+      "path": "../graphql/tsconfig.build.json"
+    },
+    {
+      "path": "../api-i18n/tsconfig.build.json"
+    },
+    {
+      "path": "../api-security/tsconfig.build.json"
+    },
+    {
+      "path": "../api-settings-manager/tsconfig.build.json"
+    },
+    {
+      "path": "../commodo/tsconfig.build.json"
+    },
+    {
+      "path": "../commodo-graphql/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-ssr/tsconfig.build.json"
+    },
+    {
+      "path": "../validation/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-db/tsconfig.build.json"
+    },
+    {
+      "path": "../handler/tsconfig.build.json"
+    },
+    {
+      "path": "../db-dynamodb/tsconfig.build.json"
+    },
+    {
+      "path": "../api-i18n-content/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-apollo-server/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-aws/tsconfig.build.json"
+    }
   ]
 }
