--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "adio": "^1.0.1",
+    "amazon-cognito-identity-js": "^4.5.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0-beta.3",
     "babel-jest": "^24.9.0",
@@ -76,13 +77,13 @@
     "glob": "^7.1.3",
     "globby": "^8.0.1",
     "got": "^9.6.0",
+    "graphql-request": "^3.3.0",
     "husky": "^4.2.5",
     "inquirer": "^7.0.0",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "inquirer-maxlength-input-prompt": "^1.0.0",
     "jest": "^24.9.0",
-    "jest-dynalite": "^3.0.0",
     "jest-extended": "^0.11.2",
     "lerna": "^3.21.0",
     "lint-staged": "^7.2.2",
@@ -91,7 +92,7 @@
     "lodash": "^4.17.11",
     "longest": "^2.0.1",
     "minimatch": "^3.0.4",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.1",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
     "rxjs": "^6.5.5",
