--- a/packages/handler-graphql-playground/package.json
+++ b/packages/handler-graphql-playground/package.json
@@ -18,8 +18,7 @@
     "@babel/runtime": "^7.5.5",
     "@webiny/handler": "^4.14.0",
     "@webiny/handler-http": "^4.14.0",
-    "apollo-server-core": "2.17.0",
-    "graphql-tag": "^2.10.1"
+    "apollo-server-core": "2.17.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
