--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -27,6 +27,7 @@
       "@webiny/api-page-builder": ["./packages/api-page-builder/src"],
       "@webiny/api-i18n/*": ["./packages/api-i18n/src/*"],
       "@webiny/api-i18n": ["./packages/api-i18n/src"],
+      "@webiny/api-tenancy/*": ["./packages/api-tenancy/src/*"],
       "@webiny/@webiny/api-plugin-elastic-search-client/*": ["./packages/api-plugin-elastic-search-client/src/*"],
       "@webiny/@webiny/api-plugin-elastic-search-client": ["./packages/api-plugin-elastic-search-client/src/*"],
       "@webiny/api-plugin-db-dynamodb/*": ["./packages/api-plugin-db-dynamodb/src/*"],
