--- a/packages/api-form-builder/package.json
+++ b/packages/api-form-builder/package.json
@@ -15,21 +15,24 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@commodo/fields": "^1.2.1",
+    "@commodo/fields": "beta",
+    "@ramda/pipe": "^0.26.1",
     "@webiny/api-i18n": "^4.14.0",
     "@webiny/api-security": "^4.14.0",
     "@webiny/commodo": "^4.14.0",
-    "@webiny/commodo-graphql": "^4.14.0",
     "@webiny/graphql": "^4.14.0",
     "@webiny/handler-ssr": "^4.14.0",
     "@webiny/validation": "^4.14.0",
+    "commodo-fields-object": "^1.0.6",
     "form-data": "^2.5.0",
     "got": "^9.6.0",
-    "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "json2csv": "^4.5.2",
+    "ksuid": "^2.0.0",
     "lodash": "^4.17.11",
     "mdbid": "^1.0.0",
+    "merge": "^1.2.1",
+    "node-fetch": "^2.6.1",
     "slugify": "^1.2.9",
     "uniqid": "^5.0.3",
     "@webiny/handler-db": "^4.14.0",
@@ -44,6 +47,8 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.8.3",
+    "@elastic/elasticsearch": "^7.9.1",
+    "@elastic/elasticsearch-mock": "^0.3.0",
     "@shelf/jest-dynamodb": "^1.7.0",
     "@webiny/api-settings-manager": "^4.14.0",
     "flow-copy-source": "^2.0.2"
