--- a/packages/api-page-builder/package.json
+++ b/packages/api-page-builder/package.json
@@ -26,6 +26,7 @@
     "@webiny/validation": "^4.14.0",
     "@commodo/fields": "beta",
     "download": "^5.0.3",
+    "dataloader": "^2.0.0",
     "extract-zip": "^1.6.7",
     "form-data": "^2.5.0",
     "fs-extra": "^7.0.0",
