--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,4 @@
-{
+ {
   "compilerOptions": {
     "target": "es6",
     "allowJs": true,
@@ -82,8 +82,8 @@
       "@webiny/commodo-graphql": ["./packages/commodo-graphql/src"],
       "@webiny/commodo-graphql/*": ["./packages/commodo-graphql/src/*"],
       "@webiny/commodo-fields-storage-db-proxy": ["./packages/commodo-fields-storage-db-proxy/src"],
-      "@webiny/db/*": ["./packages/data/src/*"],
-      "@webiny/db": ["./packages/data/src"],
+      "@webiny/db/*": ["./packages/db/src/*"],
+      "@webiny/db": ["./packages/db/src"],
       "@webiny/db-dynamodb/*": ["./packages/data-dynamodb/src/*"],
       "@webiny/db-dynamodb": ["./packages/data-dynamodb/src"],
       "@webiny/graphql/*": ["./packages/graphql/src/*"],
