fix: correct `@webiny/db` paths

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -81,8 +81,8 @@
       "@webiny/commodo-graphql": ["./packages/commodo-graphql/src"],
       "@webiny/commodo-graphql/*": ["./packages/commodo-graphql/src/*"],
       "@webiny/commodo-fields-storage-db-proxy": ["./packages/commodo-fields-storage-db-proxy/src"],
-      "@webiny/db/*": ["./packages/data/src/*"],
-      "@webiny/db": ["./packages/data/src"],
+      "@webiny/db/*": ["./packages/db/src/*"],
+      "@webiny/db": ["./packages/db/src"],
       "@webiny/db-dynamodb/*": ["./packages/data-dynamodb/src/*"],
       "@webiny/db-dynamodb": ["./packages/data-dynamodb/src"],
       "@webiny/graphql/*": ["./packages/graphql/src/*"],
