--- a/packages/api-plugin-security-cognito/tsconfig.json
+++ b/packages/api-plugin-security-cognito/tsconfig.json
@@ -8,7 +8,7 @@
 			"path": "../api-security"
 		},
 		{
-			"path": "../api-security-user-management"
+			"path": "../api-security-tenancy"
 		},
 		{
 			"path": "../handler"
