--- a/packages/api-security-tenancy/package.json
+++ b/packages/api-security-tenancy/package.json
@@ -11,20 +11,19 @@
   "license": "MIT",
   "dependencies": {
     "@commodo/fields": "1.1.2-beta.19",
-    "@ramda/pipe": "^0.26.1",
     "@webiny/api-security": "^4.11.0-beta.1",
-    "@webiny/commodo": "^4.11.0-beta.1",
-    "@webiny/commodo-graphql": "^4.11.0-beta.1",
     "@webiny/db-dynamodb": "^4.14.0",
     "@webiny/graphql": "^4.11.0-beta.1",
     "@webiny/validation": "^4.11.0-beta.1",
     "@webiny/handler": "^4.14.0",
+    "@webiny/handler-apollo-server": "^4.14.0",
     "@webiny/handler-aws": "^4.14.0",
     "@webiny/handler-db": "^4.14.0",
-    "@webiny/handler-apollo-server": "^4.14.0",
+    "@webiny/handler-http": "^4.14.0",
     "commodo-fields-object": "^1.0.6",
     "deep-equal": "^2.0.4",
     "mdbid": "^1.0.0",
+    "md5": "^2.3.0",
     "graphql-tag": "^2.10.1",
     "lodash.merge": "^4.6.2"
   },
