fix: update dependencies

--- a/packages/api-page-builder/package.json
+++ b/packages/api-page-builder/package.json
@@ -25,6 +25,7 @@
     "@webiny/handler-ssr": "^4.14.0",
     "@webiny/validation": "^4.14.0",
     "@commodo/fields": "beta",
+    "commodo-fields-object": "^1.0.6",
     "download": "^5.0.3",
     "dataloader": "^2.0.0",
     "extract-zip": "^1.6.7",
@@ -40,13 +41,16 @@
     "lodash.get": "^4.4.0",
     "lodash.pick": "^4.4.0",
     "mdbid": "^1.0.0",
-    "request": "^2.88.0",
+    "node-fetch": "^2.6.1",
     "rimraf": "^2.6.2",
     "zip-local": "^0.3.4",
+    "uniqid": "^5.2.0",
     "@webiny/api-i18n-content": "^4.14.0",
     "@webiny/api-i18n": "^4.14.0"
   },
   "devDependencies": {
+    "@webiny/api-plugin-elastic-search-client": "^4.14.0",
+    "@elastic/elasticsearch": "^7.9.1",
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-export-default-from": "^7.5.2",
