--- a/packages/api-page-builder/tsconfig.json
+++ b/packages/api-page-builder/tsconfig.json
@@ -8,6 +8,9 @@
       "path": "../api-i18n-content"
     },
     {
+      "path": "../api-plugin-elastic-search-client"
+    },
+    {
       "path": "../api-security"
     },
     {
