--- a/packages/api-security/tsconfig.json
+++ b/packages/api-security/tsconfig.json
@@ -8,6 +8,9 @@
       "path": "../handler"
     },
     {
+      "path": "../plugins"
+    },
+    {
       "path": "../handler-apollo-server"
     }
   ]
