--- a/packages/commodo-graphql/tsconfig.json
+++ b/packages/commodo-graphql/tsconfig.json
@@ -1,7 +1,4 @@
 {
   "extends": "../../tsconfig.json",
-  "references": [
-    { "path": "../graphql" },
-    { "path": "../commodo" }
-  ]
+  "references": [{ "path": "../graphql" }]
 }
