--- a/packages/handler-apollo-server/package.json
+++ b/packages/handler-apollo-server/package.json
@@ -18,11 +18,12 @@
     "@webiny/graphql": "^4.14.0",
     "@webiny/handler": "^4.14.0",
     "@webiny/handler-http": "^4.14.0",
-    "@webiny/plugins": "^4.14.0",
-    "apollo-server-core": "2.17.0",
-    "apollo-server-env": "^2.4.3",
     "boolean": "^3.0.1",
-    "graphql": "^14.4.2"
+    "graphql": "^14.4.2",
+    "graphql-iso-date": "^3.6.1",
+    "graphql-tag": "^2.10.3",
+    "graphql-type-json": "^0.3.1",
+    "graphql-type-long": "^0.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
