--- a/packages/api-security-user-management/package.json
+++ b/packages/api-security-user-management/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@ramda/pipe": "^0.26.1",
     "@webiny/api-security": "^4.11.0-beta.1",
-    "@webiny/commodo": "^4.11.0-beta.1",
+    "@webiny/plugins": "^4.11.0-beta.1",
     "@webiny/commodo-graphql": "^4.11.0-beta.1",
     "@webiny/db-dynamodb": "^4.14.0",
     "@webiny/graphql": "^4.11.0-beta.1",
