--- a/packages/commodo-graphql/package.json
+++ b/packages/commodo-graphql/package.json
@@ -14,7 +14,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@webiny/commodo": "^4.14.0",
+    "@commodo/fields": "beta",
     "@webiny/graphql": "^4.14.0",
     "graphql": "^14.4.2",
     "lodash.foreach": "^4.5.0",
