--- a/packages/commodo-graphql/tsconfig.build.json
+++ b/packages/commodo-graphql/tsconfig.build.json
@@ -1,19 +1,11 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["src"],
-  "exclude": [
-    "node_modules",
-    "./dist",
-    "../graphql",
-    "../commodo"
-  ],
+  "exclude": ["node_modules", "./dist", "../graphql"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist"
   },
-  "references": [
-    { "path": "../graphql/tsconfig.build.json" },
-    { "path": "../commodo/tsconfig.build.json" }
-  ]
+  "references": [{ "path": "../graphql/tsconfig.build.json" }]
 }
