--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -13,16 +13,10 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@apollo/federation": "^0.16.0",
     "@babel/runtime": "^7.5.5",
     "@webiny/plugins": "^4.14.0",
     "apollo-graphql": "^0.4.4",
-    "graphql": "^14.6.0",
-    "graphql-iso-date": "^3.6.1",
-    "graphql-tag": "^2.10.3",
-    "graphql-tools": "^4.0.0",
-    "graphql-type-json": "^0.3.1",
-    "graphql-type-long": "^0.1.1"
+    "graphql": "^14.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
