--- a/packages/handler-apollo-server/tsconfig.build.json
+++ b/packages/handler-apollo-server/tsconfig.build.json
@@ -1,33 +1,21 @@
 {
-	"extends": "../../tsconfig.build.json",
-	"include": [
-		"./src"
-	],
-	"exclude": [
-		"node_modules",
-		"./dist",
-		"../handler",
-		"../handler-http",
-		"../graphql",
-		"../plugins"
-	],
-	"compilerOptions": {
-		"rootDir": "./src",
-		"outDir": "./dist",
-		"declarationDir": "./dist"
-	},
-	"references": [
-		{
-			"path": "../handler/tsconfig.build.json"
-		},
-		{
-			"path": "../handler-http/tsconfig.build.json"
-		},
-		{
-			"path": "../graphql/tsconfig.build.json"
-		},
-		{
-			"path": "../plugins/tsconfig.build.json"
-		}
-	]
+  "extends": "../../tsconfig.build.json",
+  "include": ["./src"],
+  "exclude": ["node_modules", "./dist", "../handler", "../handler-http", "../graphql"],
+  "compilerOptions": {
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "declarationDir": "./dist"
+  },
+  "references": [
+    {
+      "path": "../handler/tsconfig.build.json"
+    },
+    {
+      "path": "../handler-http/tsconfig.build.json"
+    },
+    {
+      "path": "../graphql/tsconfig.build.json"
+    }
+  ]
 }
