--- a/packages/api-headless-cms/tsconfig.json
+++ b/packages/api-headless-cms/tsconfig.json
@@ -24,7 +24,7 @@
 			"path": "../handler"
 		},
 		{
-			"path": "../handler-apollo-server"
+			"path": "../handler-graphql"
 		},
 		{
 			"path": "../handler-client"
