--- a/packages/api-headless-cms/tsconfig.build.json
+++ b/packages/api-headless-cms/tsconfig.build.json
@@ -11,7 +11,7 @@
 		"../commodo",
 		"../commodo-graphql",
 		"../handler",
-		"../handler-apollo-server",
+		"../handler-graphql",
 		"../handler-client",
 		"../handler-http",
 		"../validation",
@@ -40,7 +40,7 @@
 			"path": "../handler/tsconfig.build.json"
 		},
 		{
-			"path": "../handler-apollo-server/tsconfig.build.json"
+			"path": "../handler-graphql/tsconfig.build.json"
 		},
 		{
 			"path": "../handler-client/tsconfig.build.json"
