--- a/packages/api-i18n/package.json
+++ b/packages/api-i18n/package.json
@@ -16,7 +16,7 @@
     "@webiny/graphql": "^4.14.0",
     "@webiny/handler": "^4.14.0",
     "@webiny/handler-aws": "^4.14.0",
-    "@webiny/handler-apollo-server": "^4.14.0",
+    "@webiny/handler-graphql": "^4.14.0",
     "@webiny/handler-client": "^4.14.0",
     "@webiny/handler-db": "^4.14.0",
     "@webiny/db-dynamodb": "^4.14.0",
