--- a/packages/api-i18n/tsconfig.build.json
+++ b/packages/api-i18n/tsconfig.build.json
@@ -7,7 +7,7 @@
     "../graphql",
     "../handler",
     "../handler-aws",
-    "../handler-apollo-server",
+    "../handler-graphql",
     "../handler-client",
     "../handler-db",
     "../db-dynamodb",
@@ -34,7 +34,7 @@
       "path": "../handler-aws/tsconfig.build.json"
     },
     {
-      "path": "../handler-apollo-server/tsconfig.build.json"
+      "path": "../handler-graphql/tsconfig.build.json"
     },
     {
       "path": "../handler-client/tsconfig.build.json"
