--- a/packages/api-i18n/tsconfig.json
+++ b/packages/api-i18n/tsconfig.json
@@ -14,7 +14,7 @@
       "path": "../handler-aws"
     },
     {
-      "path": "../handler-apollo-server"
+      "path": "../handler-graphql"
     },
     {
       "path": "../handler-client"
