--- a/packages/api-page-builder/package.json
+++ b/packages/api-page-builder/package.json
@@ -19,7 +19,7 @@
     "@webiny/db-dynamodb": "^4.14.0",
     "@webiny/graphql": "^4.14.0",
     "@webiny/handler": "^4.14.0",
-    "@webiny/handler-apollo-server": "^4.14.0",
+    "@webiny/handler-graphql": "^4.14.0",
     "@webiny/handler-aws": "^4.14.0",
     "@webiny/handler-db": "^4.14.0",
     "@webiny/handler-ssr": "^4.14.0",
