--- a/packages/api-security-user-management/package.json
+++ b/packages/api-security-user-management/package.json
@@ -20,7 +20,7 @@
     "@webiny/handler": "^4.14.0",
     "@webiny/handler-aws": "^4.14.0",
     "@webiny/handler-db": "^4.14.0",
-    "@webiny/handler-apollo-server": "^4.14.0",
+    "@webiny/handler-graphql": "^4.14.0",
     "commodo-fields-object": "^1.0.6",
     "ksuid": "^2.0.0",
     "graphql-tag": "^2.10.1",
