fix: rename `handler-apollo-server` to `handler-graphql`

--- a/packages/api-page-builder/tsconfig.json
+++ b/packages/api-page-builder/tsconfig.json
@@ -35,7 +35,7 @@
       "path": "../api-i18n"
     },
     {
-      "path": "../handler-apollo-server"
+      "path": "../handler-graphql"
     },
     {
       "path": "../handler-aws"
