--- a/packages/cli-plugin-scaffold-graphql-service/template/package.json
+++ b/packages/cli-plugin-scaffold-graphql-service/template/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@webiny/validation": "^4.3.0",
     "@webiny/handler": "^4.0.2",
-    "@webiny/handler-apollo-server": "^4.0.2",
+    "@webiny/handler-graphql": "^4.0.2",
     "@webiny/api-security": "^4.0.2",
     "@webiny/project-utils": "^4.0.2"
   },
