--- a/packages/api-google-tag-manager/package.json
+++ b/packages/api-google-tag-manager/package.json
@@ -12,10 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@webiny/api-security": "^4.14.0",
     "@webiny/commodo": "^4.14.0",
     "@webiny/commodo-graphql": "^4.14.0",
-    "@webiny/graphql": "^4.14.0",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.4"
   },
@@ -24,8 +22,7 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.8.3",
-    "@svgr/webpack": "^4.3.2",
-    "@webiny/api-settings-manager": "^4.14.0"
+    "@svgr/webpack": "^4.3.2"
   },
   "peerDependencies": {
     "@webiny/graphql": "^4.14.0"
