--- a/packages/api-mailchimp/package.json
+++ b/packages/api-mailchimp/package.json
@@ -27,8 +27,7 @@
 		"@babel/preset-env": "^7.5.5",
 		"@babel/preset-react": "^7.0.0",
 		"@babel/preset-typescript": "^7.8.3",
-		"@svgr/webpack": "^4.3.2",
-		"@webiny/api-settings-manager": "^4.14.0"
+		"@svgr/webpack": "^4.3.2"
 	},
 	"publishConfig": {
 		"access": "public",
